--- a/app/assets/stylesheets/components/_user_card.scss
+++ b/app/assets/stylesheets/components/_user_card.scss
@@ -109,6 +109,7 @@
 
 .clickable-card p {
   font-family: $body-font !important;
+  display: inline-block;
 }
 
 .clickable-card h1, h2, h3, h4, h5, h6 {
