--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -13,4 +13,5 @@ $primary-colour: #5DADE2;
 $secondary-colour: #566573;
 $accent-colour: #A569BD;
 $background-colour: #FBFCFC;
+$main-background-colour: #d5fdfd;
 $text-colour: #2E4053;
