--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -129,7 +129,7 @@
   overflow: hidden;
   height: auto;
   width: 100%;
-  background-color: #70b6e2;
+  background-color: $primary-colour;
 }
 
 @keyframes marquee {
