--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,9 +31,8 @@
       </div>
 
         <% if user_signed_in? %>
-        <div class="navbar-avatar">
-         <li class="nav-item dropdown">
-            <i class="fa-regular fa-user" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+          <%= cl_image_tag current_user.photo.key, class:"navbar-avatar", id:"navbarDropdown", data_bs_toggle:"dropdown", crop: :fill unless current_user.photo.key.blank? %>
+            <li class="nav-item dropdown">
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">My Profile</a>
               <%= link_to "My bookings", my_bookings_path, class: "nav-link dropdown-item" %>
