--- a/app/assets/stylesheets/components/_mybookings_card.scss
+++ b/app/assets/stylesheets/components/_mybookings_card.scss
@@ -7,6 +7,16 @@
   padding: 20px;
   border-radius: 5px;
   background-color: rgb(227, 227, 227);
+
+  h4 {
+    margin: 0;
+    font-size: 1.2rem;
+    text-decoration: underline;
+  }
+
+  ul {
+    list-style: none;
+  }
 }
 
 .mybookings-card:hover {
