--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -99,8 +99,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
+  border: solid 1px rgb(207, 254, 255);
   border-radius: 50%;
   background-color: $background-colour;
 
@@ -138,4 +139,8 @@
 .nav-link {
   text-decoration: none !important;
   color: $text-colour !important;
+}
+
+.avatar-dropdown::after {
+  display: none !important;
 }
