--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-6 col-sm-4 col-sm-offset-4">
       <div class="signup-form">
         <h2><strong>Request Booking:</strong></h2>
-        <%= simple_form_for @booking, url: interview_booking_path(interviewer_id: @user.id), data: { controller: 'flatpickr' } do |f| %>
+        <%= simple_form_for @booking, url: interview_booking_path(interviewer_id: @user.id), data: {turbo: false, controller: 'flatpickr' } do |f| %>
           <%= link_to "Connect to zoom", auth_path %>
           <%= f.input :start_time, as: :string, input_html: { data: { flatpickr_target: "startTime" } } %>
           <%= f.input :end_time, as: :string, input_html: { data: { flatpickr_target: "endTime" } } %>
