--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,6 +11,9 @@
 @import "review_card";
 @import "signup_form";
 @import "signin_form";
-@import "chatroom";
+@import "chatbox";
 @import "calendar";
 @import "mybookings_card";
+@import "filter_bar";
+@import "message";
+@import "messages_sidebar";
