--- a/app/assets/stylesheets/components/_mybookings_card.scss
+++ b/app/assets/stylesheets/components/_mybookings_card.scss
@@ -20,7 +20,7 @@
   align-items: center;
 }
 
-.accept-button {
+.accept-button, .message-button {
   text-decoration: none;
   border: none;
   background: $primary-colour;
@@ -42,6 +42,7 @@
   border-radius: 5px;
   height: 40px;
   width: 80px;
+  margin-right: 10px;
   &:hover {
     color: rgb(228, 89, 25);
     border-color: rgb(228, 89, 25);
