--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,15 +1,11 @@
-<div class="container chatroom" data-controller="chatroom-subscription" data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
-  <h1>#<%= @chatroom.name %></h1>
-
-  <div class="messages" data-chatroom-subscription-target="messages">
-    <% @chatroom.messages.each do |message| %>
-      <%= render "messages/message", message: message %>
-    <% end %>
+<div class="row">
+  <div class="col-3" style="padding-right: 0px; max-height: 85vh; overflow-y: auto;">
+    <%= render 'shared/messages_sidebar', messages_sidebar: @messages_sidebar %>
   </div>
-
-  <%= simple_form_for [@chatroom, @message],
-    html: { class: "d-flex", data: { action: "turbo:submit-end->chatroom-subscription#resetForm" } } do |f| %>
-    <%= f.input :content, label: false, placeholder: "Message ##{@chatroom.name}", wrapper_html: { class: "flex-grow-1" } %>
-    <%= f.submit "Send", class: "btn btn-dark mb-3" %>
-  <% end %>
+  <div class="col-6" style="padding-left: 0px;">
+    <%= render 'shared/chatbox', chatbox: @chatbox %>
+  </div>
+  <div class="col-3" style="padding-right: 0px;">
+    <%= render 'shared/chatroom_interviewer_profile', chatroom_interviewer_profile: @chatroom_interviewer_profile %>
+  </div>
 </div>
