--- a/app/views/shared/_filter_bar.html.erb
+++ b/app/views/shared/_filter_bar.html.erb
@@ -158,24 +158,10 @@
       </div>
       <!-- Reset button -->
       <div class="accordion-item mb-3">
-        <h2 class="accordion-header">
-          <input class="btn btn-dark" type="submit" value="Submit">
-          <input class="btn btn-dark" type="reset" value="Reset">
+        <h2 class="accordion-header-button">
+          <input class="btn-reset" type="reset" value="Reset">
         </h2>
       </div>
     </div>
   </div>
 </form>
-<%# <!-- JavaScript to Handle Accordion Button Toggle -->
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    const accordionButtons = document.querySelectorAll(".accordion-button");
-    accordionButtons.forEach(button => {
-      button.addEventListener("click", function() {
-        this.classList.toggle("collapsed");
-        const collapseTarget = document.querySelector(this.getAttribute("data-bs-target"));
-        collapseTarget.classList.toggle("show");
-      });
-    });
-  });
-</script> %>
