--- a/app/views/shared/_mybookings_card.html.erb
+++ b/app/views/shared/_mybookings_card.html.erb
@@ -7,6 +7,7 @@
       <div class="accept-reject-buttons">
         <small><%= button_to "Accept", update_booking_status_path(booking, status: 'accepted'), class: "accept-button", method: :patch, data: {turbo: false} %></small>
         <small><%= button_to "Reject", update_booking_status_path(booking, status: 'rejected'), class: "reject-button", method: :patch, data: {turbo: false} %></small>
+        <small><%= button_to 'Message', booking.chatroom, method: :get, class: "message-button" %></small>
       </div>
 
   <% end %>
