Added front end changes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,7 +53,9 @@
       <p>As companies look to grow build up recruiting experience with your team to help with practising interview processes</p>
     </div>
   </div>
-  <h1 class="p-4">Find experienced developers to help you prepare</h1>
+  <div class="find-devs-title">
+    <h1 class="p-4">Find experienced developers to help you prepare</h1>
+  </div>
   <div id="topteninterviewers">
   <div class="marquee-content">
     <div class="user-cards-container">
