--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@
 }
 
 body {
-  background-color: $main-background-colour !important;
+  background-color: $background-colour !important;
   color: $text-colour !important;
   font-family: $body-font !important;
 }
