--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -99,11 +99,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border: solid 1px rgb(207, 254, 255);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: $background-colour;
+  margin: 0px;
 
   a {
     color: grey;
@@ -141,6 +143,15 @@
   color: $text-colour !important;
 }
 
+.avatar-dropdown {
+  margin: 0px;
+  padding: 0px !important;
+}
+
 .avatar-dropdown::after {
   display: none !important;
+}
+
+.dropdown > a {
+  padding: 0px !important;
 }
