--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  height: 60vh;
+  height: 70vh;
 
   &::before {
     content: "";
@@ -77,6 +77,24 @@
   }
 }
 
+.container-cards-home {
+  height: 80vh;
+  display: flex;
+  align-items: center;
+
+}
+
+.card-home {
+  height: 45vh;
+  background-color: white;
+}
+
+.find-devs-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #homepage-first {
   color: #8b7ac5;
   padding-right: 15px;
@@ -98,8 +116,9 @@
   height: 120px;
   width: 120px;
   background-color: #0a1220;
-  top: 20px;
+  top: 30px;
   right: -130px;
+  margin-top: 18px;
   // position: relative;
 }
 
