--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -71,7 +71,7 @@
 .user-buttons {
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: space-between;
 }
 
 .bottom-buttons {
@@ -109,6 +109,7 @@
 
 #years-exp-panel {
   margin-left: 8px;
+  margin-top: 5px;
   border: 0px;
   padding: 4px 15px;
   background-color: $primary-colour;
@@ -130,6 +131,7 @@
 
 #interviews-panel {
   margin-left: 8px;
+  margin-top: 5px;
   border: 0px;
   padding: 4px 15px;
   background-color: $primary-colour;
