--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
-<div class="navbar-extender"><%= cl_image_tag @user.photo.key, class:"user-avatar-show", crop: :fill unless @user.photo.key.blank? %></div>
+<div class="navbar-extender" style="background-image: url('<%= cl_image_path current_user.photo.key, height: 300, crop: :fill unless current_user.photo.key.blank?%>');">
+  <%= cl_image_tag @user.photo.key, class:"user-avatar-show", crop: :fill unless @user.photo.key.blank? %>
+</div>
 <div class="container">
   <div class="user-details-buttons row g-0">
     <div class="user-details col-12 col-sm-8 col-md-8 col-lg-8">
