--- a/app/views/interviewers/become_interviewer.html.erb
+++ b/app/views/interviewers/become_interviewer.html.erb
@@ -11,7 +11,7 @@
           <%= f.input :github, label: "Github profile URL"%>
           <%= f.input :fiverr, label: "Fiverr profile URL"%>
           <%= f.input :personal_website, label: "Personal website URL"%>
-
+          <%= f.input :banner_photo, as: :file %>
           <%= f.association :tags,
                           as: :check_boxes,
                           input_html: { class: "tag-selector" },
