--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -1,5 +1,5 @@
 .navbar-extender {
-  height: 80px;
+  height: 25vh;
   background-color: $primary-colour;
   position: relative;
   overflow: visible;
@@ -11,7 +11,7 @@
   border-radius: 50%;
   position: absolute;
   left: 10%;
-  top: 30px;
+  top: 70%;
   border: 1px solid white;
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
 }
