updated banner picture code

--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -3,6 +3,9 @@
   background-color: $primary-colour;
   position: relative;
   overflow: visible;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .user-avatar-show {
