--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -10,6 +10,19 @@
   }
 }
 
+.calendar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 50% !important;
+  height: min-content;
+  padding-right: 10px;
+
+  p {
+    margin-bottom: 0;
+  }
+}
+
 .meeting {
   color: white;
   padding: 4px 12px;
