--- a/app/views/bookings/mybookings.html.erb
+++ b/app/views/bookings/mybookings.html.erb
@@ -25,7 +25,7 @@
       <% bookings.each do |booking| %>
         <div class="meeting">
           <small><%= booking.interviewee.try(:first_name) %> <%= booking.interviewee.try(:last_name) %>
-          <%= booking.time unless booking.multi_days? %>
+          <p> <%= booking.time unless booking.multi_days? %> </p>
           <a href="<%= booking.meeting_link %>" target="_blank">Meeting</a></small>
         </div>
       <% end %>
@@ -33,10 +33,7 @@
   </div>
   <div class="bookings-container">
     <h4> My Bookings: </h4>
-    <% if @mybookings.any? %>
-      <%= render 'shared/mybookings_card', mybookings: @mybookings %>
-    <% else %>
-      <h6><em> You don't have any bookings yet </em></h6>
-    <% end %>
+    <h6><em> <%=  "You don't have any bookings yet" if @mybookings.empty? %> </em></h6>
+    <%= render 'shared/mybookings_card', mybookings: @mybookings %>
   </div>
 </div>
