--- a/app/assets/stylesheets/components/_booked_interviewer.scss
+++ b/app/assets/stylesheets/components/_booked_interviewer.scss
@@ -1,5 +1,5 @@
 .override-height {
-  height: auto;
+  height: auto !important;
 }
 
 .interview-info {
@@ -18,4 +18,22 @@
   i {
     padding-right: 10px;
   }
+}
+
+.tags-section {
+  display: flex;
+  justify-content: space-between;
+}
+
+.view-profile {
+  padding: 6px 16px;
+  background-color: #d9f0ff;
+  border-radius: 50px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  justify-content: start;
+  border: none;
+  font-size: 12px;
+  color: $text-colour;
 }
