--- a/app/views/bookings/myinterviews.html.erb
+++ b/app/views/bookings/myinterviews.html.erb
@@ -1,4 +1,4 @@
 <div class="container mt-5">
-  <h4> Interviews </h4>
+  <h4> My booked interviews </h4>
   <%= render "shared/booked_interviewer" %>
 </div>
