--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -2,10 +2,10 @@
   <div class="col-3" style="padding-right: 0px; max-height: 85vh; overflow-y: auto;">
     <%= render 'shared/messages_sidebar', messages_sidebar: @messages_sidebar %>
   </div>
-  <div class="col-6" style="padding-left: 0px;">
+  <div class="col-6" style="padding-left: 0px; padding-right: 0px">
     <%= render 'shared/chatbox', chatbox: @chatbox %>
   </div>
-  <div class="col-3" style="padding-right: 20px; padding-left: 20px">
+  <div class="col-3" style="padding-right: 15px; padding-left: 5px">
     <%= render 'shared/chatroom_interviewer_profile', chatroom_interviewer_profile: @chatroom_interviewer_profile %>
   </div>
 </div>
