--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,14 +24,20 @@
         <a href="<%= myinterviews_path %>" class="nav-links">Interviews</a>
       </li>
     </ul>
-
     <div class="nav-menu-right">
+
+
       <div class="search-bar">
-        <i class="fas fa-search"></i>
-        <form class="search-form">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button name="button" type="submit" class="nav-links btn">
+          <i class="fas fa-search"></i>
+        </button>
+        <form action="/users" method="GET" class="search-form d-flex">
+          <input class="form-control me-2 custom-search" type="search" name="query" placeholder="Search" aria-label="Search">
         </form>
       </div>
+
+
+
       <% if user_signed_in? %>
         <div class="dropdown">
           <a id="navbarDropdown" class="nav-link dropdown-toggle avatar-dropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
