upadted front end on chatroom

--- a/app/views/shared/_chatroom_interviewer_profile.html.erb
+++ b/app/views/shared/_chatroom_interviewer_profile.html.erb
@@ -1,20 +1,22 @@
 <% if @other_user %>
   <div class="chat-user-container">
-    <div class="chat-user-infos">
-      <div class="avatar-infos">
-        <%= cl_image_tag @other_user.photo.key, class:"chat-avatar-img", crop: :fill unless @other_user.photo.key.blank? %>
-        <div class="chat-name-username">
-          <h4 class="chat-user-fullname"><strong><%= @other_user.first_name %> <%= @other_user.last_name %></strong></h4>
-          <p class="chat-user-username">@<%= @other_user.username %></p>
+    <div class="chat-info-and-tags">
+      <div class="chat-user-infos">
+        <div class="avatar-infos">
+          <%= cl_image_tag @other_user.photo.key, class:"chat-avatar-img", crop: :fill unless @other_user.photo.key.blank? %>
+          <div class="chat-name-username">
+            <h4 class="chat-user-fullname"><strong><%= @other_user.first_name %> <%= @other_user.last_name %></strong></h4>
+            <p class="chat-user-username">@<%= @other_user.username %></p>
+          </div>
         </div>
+        <%= link_to "View", user_path(@other_user), class:"chat-view-button" %>
       </div>
-      <%= link_to "View", user_path(@other_user), class:"chat-view-button" %>
-    </div>
-    <div class="chat-user-tags">
-      <% user_tags=UserTag.where(user: @other_user) %>
-      <% user_tags.each do |usertag| %>
-        <div class="chat-individual-tag"><p><%= image_tag(usertag.tag.icon_url, class:"chat-tag-icon") %> <%= usertag.tag.name %></p></div>
-      <% end %>
+      <div class="chat-user-tags">
+        <% user_tags=UserTag.where(user: @other_user) %>
+        <% user_tags.each do |usertag| %>
+          <div class="chat-individual-tag"><p><%= image_tag(usertag.tag.icon_url, class:"chat-tag-icon") %> <%= usertag.tag.name %></p></div>
+        <% end %>
+      </div>
     </div>
     <div class="chat-booking-info">
       <h4 class="chat-booking-info-title border-bottom">Your Interview with <strong><%= @other_user.first_name %></strong></h4>
@@ -32,10 +34,12 @@
           <%= link_to "Cancel", booking_path(@chatroom.booking), class:"chat-booking-delete", data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to cancel this booking? This will close your chatroom with #{@other_user.first_name}" } %>
         </div>
         <div class="go-to-zoom">
-          <p>go to room</p>
+          <a href="<%= @chatroom.booking.meeting_link %>" target="_blank" class="go-to-room-button">Go to room</a>
           <%= image_tag "zoom.png", class: "zoom-icon", crop: :fill %>
         </div>
       </div>
+    </div>
+    <div>
     </div>
   </div>
 <% else %>
