--- a/app/assets/stylesheets/components/_chatroom_interviewer_profile.scss
+++ b/app/assets/stylesheets/components/_chatroom_interviewer_profile.scss
@@ -1,6 +1,9 @@
 .chat-user-container {
   height: 100%;
   background-color: $background-colour;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .chat-user-infos {
@@ -91,19 +94,21 @@
 
 .chat-booking-info-title {
   font-size: 20px;
-  margin-bottom: 20px;
-  padding-bottom: 10px;
+  margin-bottom: 25px;
+  padding-bottom: 15px;
 }
 
 .chat-booking-start {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 .chat-booking-end {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+  padding-bottom: 10px;
 }
 
 .chat-booking-edit {
@@ -134,6 +139,12 @@
 .go-to-zoom {
   display: flex;
   align-items: center;
+}
+
+.go-to-room-button {
+  text-decoration: none;
+  color: $primary-colour;
+  margin-right: 6px;
 }
 
 .zoom-icon {
