--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -5,22 +5,74 @@
   table {
     width: 100%;
   }
+
+  .table_header {
+    background-color: #5DADE2;
+    color:#FBFCFC;
+  }
+
+
+  .table-striped {
+  background-color: #FBFCFC;
+}
+
   .today {
-    background-color: #cacaca;
+    background-color: #5DADE2;
   }
 }
 
+
 .meeting {
-  color: white;
+  color: black;
   padding: 4px 12px;
   margin-top: 10px;
   border-radius: 4px;
-  background: #8b8b8b;
+  border: 1px solid #566573;
+  background: #FBFCFC;
+  box-shadow: 3px 3px 3px rgba(175, 105, 189, 0.5);
   transition: background 0.3s ease;
+  text-align: center;
+
+  #icon {
+    padding-right: 3px;
+    color: #566573;
+  }
+
+  h5 {
+    font-size: 15px;
+    font-weight: bold;
+  }
+
+  h6 {
+    font-size: 10px;
+    color: #2E4053;
+
+  }
+
+  .btn-primary {
+    background-color: #A569BD;
+    border: 1px solid #566573;
+    border-radius: 4px;
+    color: #FBFCFC;
+    text-decoration: none;
+    padding:1px 6px;
+    font-size: 10px;
+  }
+
+  .btn-primary:hover {
+    color: white;
+    background-color: #A569BD;
+    border: 2px solid #566573;
+  }
+
 }
 
 .meeting:hover {
-  background: #d3d3d3;
-  color: white;
+  background: #FBFCFC;
+  color: black;
+  width: 150px;
+  height: 100px;
   transform: translateY(-5px);
+  padding: 10px;
+  align-content: center;
 }
