added user card

--- a/app/assets/stylesheets/components/_user_card.scss
+++ b/app/assets/stylesheets/components/_user_card.scss
@@ -1,5 +1,6 @@
 .card-user {
   overflow: hidden;
+  background-color: $background-colour;
   position: relative;
   box-shadow: 0 0 10px rgba(154, 154, 154, 0.2);
   border-radius: 10px;
