--- a/app/assets/stylesheets/components/_booked_interviewer.scss
+++ b/app/assets/stylesheets/components/_booked_interviewer.scss
@@ -40,3 +40,9 @@
   color: $text-colour;
   text-decoration: none;
 }
+
+.my-interviews-placeholder {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
