--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -48,8 +48,10 @@
             <% end %>
           </a>
           <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">My Profile</a>
-            <%= link_to "My bookings", my_bookings_path, class: "dropdown-item" %>
+            <% if current_user.interviewer == true %>
+              <%= link_to "My profile", user_path(current_user), class: "dropdown-item" %>
+              <%= link_to "My bookings", my_bookings_path, class: "dropdown-item" %>
+            <% end %>
             <%= link_to "Edit Profile", edit_user_registration_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
           </div>
