--- a/app/assets/stylesheets/components/_signin_form.scss
+++ b/app/assets/stylesheets/components/_signin_form.scss
@@ -5,11 +5,12 @@
   margin-top: 40px;
   margin-bottom: 40px;
   border-radius: 5px;
-  box-shadow: 0 5px 10px grey;
+  box-shadow: 0 5px 10px $accent-colour;
+  box-shadow: 0 3px 3px 3px rgba(216, 188, 222, 0.5);
 
   .btn-primary {
     background-color: $text-colour;
-    box-shadow: 5px 10px 10px rgb(98, 97, 97);
+    box-shadow: 5px 8px 8px rgb(98, 97, 97);
     padding: 10px 30px 10px 30px;
     margin-bottom: 20px;
     border-radius: 5px;
@@ -19,12 +20,30 @@
 
   .btn-primary:hover {
     background-color: $secondary-colour;
-    border: 2px solid black
+  }
+
+  .btn-forms {
+    padding-left: 0;
+    padding-top: 0;
+    padding-bottom: 15px;
   }
 
   h2 {
     margin-bottom: 10px;
     font-size: 25px;
     text-align: center;
+  }
+
+  a {
+    color: $text-colour;
+    text-decoration: none;
+    :hover {
+      color: $text-colour;
+      text-decoration: none;
+    }
+  }
+
+  .form-label {
+    margin-bottom: 2px !important;
   }
 }
