--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -18,13 +18,13 @@
                         hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                         input_html: { autocomplete: "new-password" } %>
             <%= f.input :password_confirmation,
-                        label: "Confirm your new password",
+                        label: "Confirm new password",
                         required: true,
                         input_html: { autocomplete: "new-password" } %>
           </div>
 
           <div class="form-actions">
-            <%= f.button :submit, "Change my password", class: "btn-primary" %>
+        
           </div>
         <% end %>
 
