--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -15,7 +15,7 @@
           </div>
 
           <div class="form-actions">
-            <%= f.button :submit, "Send me reset password instructions", class: "btn-primary" %>
+            <%= f.button :submit, "Reset link", class: "btn-primary" %>
           </div>
         <% end %>
 
