--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -8,7 +8,7 @@
           <%= f.error_notification %>
           <%= f.full_error :unlock_token %>
 
-          <div class="form-inputs">
+          <div class="form-inputs" style="margin-bottom: 2px">
             <%= f.input :email,
                         required: true,
                         autofocus: true,
